<resources>

    <string name="app_name">Final_project</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_extras">ExtrasActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="i_am_fine">I am fine</string>
    <string name="extras">Extras</string>
    <string name="title_activity_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="help_button_settings">Help button settings</string>
    <string name="siren">Siren</string>
    <string name="camera">Camera</string>
    <string name="dogs">Dogs</string>
    <string name="flash">Flash</string>
    <string name="set_sms">Set help sms message</string>
    <string name="set_i_am_fine_sms">Set i am fine sms message</string>
    <string name="set_pass">Set I am fine password</string>
    
</resources>